# mydu

./: .gitignore  .hgignore  MyDu.hs  README  default.nix  flake.nix  mydu.cabal  release.nix
src/: MyDu.hs
