name:      mydu
version:   1.0
synopsis:  A basic recursive du
description:
  A version of du that recurses through all the sub-directories and
  reports the total size of each one.

license:   PublicDomain
author:    Douglas Burke
maintainer: dburke.gw@gmail.com

build-type:     Simple
cabal-version:  >= 1.8

executable mydu
  hs-source-dirs:  src
  main-is:         MyDu.hs

  build-depends:
     base >= 4.6 && < 5.0,
     -- to avoid conditional code to deal with changes in directory,
     -- juts pick a recent version
     directory >= 1.3 && < 1.4,
     filepath >= 1.3 && < 1.5,
     unix >= 2.6 && < 2.8

  ghc-options:
     -Wall

