cabal-version:  2.4

name:      mydu
version:   1.0
synopsis:  A basic recursive du
description:
  A version of du that recurses through all the sub-directories and
  reports the total size of each one.

license:   CC0-1.0
author:    Douglas Burke
maintainer: dburke.gw@gmail.com

build-type:     Simple

executable mydu
  hs-source-dirs:  src
  main-is:         MyDu.hs

  build-depends:
     base >= 4.6 && < 5.0,
     -- to avoid conditional code to deal with changes in directory,
     -- juts pick a recent version
     directory >= 1.3 && < 1.4,
     filepath >= 1.3 && < 1.5,
     unix >= 2.6 && < 2.8

  default-language: Haskell2010

  ghc-options:
     -Wall

